--- a/roles/ilo_https_certificate/tasks/check.yml
+++ b/roles/ilo_https_certificate/tasks/check.yml
@@ -10,7 +10,8 @@
 - name: Get certificates with the expected name
   ansible.builtin.set_fact:
     _ilo_days_to_expiration: >-
-      {{ _ilo_certificate.certificate_info.valid_not_after | to_datetime('%Y-%m-%dT%H:%M:%SZ') | difference(now(), 'days') }}
+      {{ (_ilo_certificate.certificate_info.valid_not_after | to_datetime('%Y-%m-%dT%H:%M:%SZ') -
+          ansible_date_time.iso8601 | to_datetime('%Y-%m-%dT%H:%M:%SZ')).days | int }}
 
 - name: Set create certificate variable
   ansible.builtin.set_fact:
